@@ -1,0 +1,15 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "H. E. Ives and H. B. Briggs. The optical constants of potassium, <a href=\"https://doi.org/10.1364/JOSA.26.000238\"><i>J. Opt. Soc. Am.</i> <b>26</b>, 238-246 (1936)</a>"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.2536 0.744 0.049
+        0.3126 0.410 0.080
+        0.3650 0.150 0.443
+        0.4047 0.105 0.710
+        0.4358 0.121 0.978
+        0.5461 0.091 1.42
+        0.5780 0.094 1.57
