@@ -1,0 +1,106 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "M. M. Kirillova, L. V. Nomerovannaya, M. M. Noskov. Optical properties of molybdenum single crystals , <a href=\"http://www.jetp.ac.ru/cgi-bin/e/index/e/33/6/p1210?a=list\"><i>Sov. Phys. JETP</i> <b>33</b>, 1210-1214 (1971)</a>"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.265 1.43 3.57
+        0.280 1.82 3.72
+        0.289 1.94 3.76
+        0.302 2.21 3.56
+        0.312 2.14 3.61
+        0.365 2.65 3.50
+        0.404 2.66 3.41
+        0.425 2.71 3.41
+        0.450 2.84 3.51
+        0.475 2.95 3.64
+        0.500 3.15 3.73
+        0.525 3.22 3.74
+        0.550 3.47 3.56
+        0.575 3.42 3.55
+        0.600 3.38 3.56
+        0.650 3.45 3.67
+        0.675 3.47 3.74
+        0.700 3.48 3.70
+        0.725 3.50 3.80
+        0.750 3.52 3.65
+        0.775 3.47 3.57
+        0.800 3.46 3.65
+        0.850 3.29 3.58
+        0.900 3.04 3.67
+        0.950 2.84 3.85
+        1.00 2.62 4.08
+        1.10 2.28 4.75
+        1.20 1.99 5.26
+        1.25 1.89 5.50
+        1.30 2.00 6.08
+        1.35 2.23 6.37
+        1.40 2.20 6.66
+        1.45 2.17 6.86
+        1.50 2.13 7.27
+        1.55 2.10 7.45
+        1.60 2.16 7.83
+        1.65 2.12 8.15
+        1.70 2.09 8.58
+        1.75 2.02 8.79
+        1.80 2.00 9.08
+        1.90 1.85 9.80
+        2.00 1.80 10.4
+        2.10 1.80 10.6
+        2.20 1.75 10.7
+        2.30 1.67 11.6
+        2.40 1.76 11.7
+        2.50 2.10 12.6
+        2.60 2.35 13.1
+        2.70 2.43 13.5
+        2.80 2.45 13.7
+        2.90 2.54 14.1
+        3.00 2.70 14.9
+        3.10 2.65 15.3
+        3.20 2.60 16.0
+        3.30 2.74 16.2
+        3.40 3.03 16.5
+        3.50 2.90 17.5
+        3.60 2.90 17.7
+        3.70 3.25 18.2
+        3.80 3.50 18.6
+        3.90 3.60 19.0
+        4.00 3.47 19.4
+        4.10 3.38 20.4
+        4.20 3.50 21.1
+        4.40 3.60 21.7
+        4.50 3.70 22.1
+        4.75 4.10 22.8
+        5.00 4.25 23.9
+        5.25 4.60 25.0
+        5.50 4.76 26.1
+        5.75 5.12 27.0
+        6.50 6.00 30.4
+        6.75 6.10 31.6
+        7.00 6.40 32.7
+        7.25 6.50 33.6
+        7.50 7.33 34.9
+        7.75 7.75 35.8
+        8.00 8.25 37.8
+        8.25 8.20 37.3
+        8.50 9.35 39.4
+        8.75 9.93 39.5
+        9.00 9.73 40.6
+        9.25 10.1 41.2
+        9.50 10.1 41.2
+        9.75 10.3 42.5
+        10.0 11.0 43.9
+        10.5 12.4 47.4
+        11.0 13.5 49.4
+        11.5 13.2 50.5
+        12.0 15.5 52.0
+        13.0 17.0 55.2
+        14.0 19.7 57.1
+        15.0 21.1 60.5
+        16.0 22.6 63.5
+        17.0 24.3 67.9
+        18.0 27.0 71.0
+        19.0 30.7 74.0
+        20.0 34.0 78.0
