@@ -1,0 +1,16 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "H. E. Ives and H. B. Briggs. The optical constants of sodium, <a href=\"https://doi.org/10.1364/JOSA.27.000181\"><i>J. Opt. Soc. Am.</i> <b>27</b>, 181-185 (1937)</a>"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.2536 0.026 0.621
+        0.2652 0.028 0.735
+        0.3126 0.040 1.02
+        0.3650 0.042 1.44
+        0.4047 0.048 1.56
+        0.4358 0.048 1.80
+        0.5461 0.029 2.32
+        0.5780 0.027 2.59
