@@ -1,0 +1,17 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "H. E. Ives and H. B. Briggs. Optical constants of rubidium and cesium, <a href=\"https://doi.org/10.1364/JOSA.27.000395\"><i>J. Opt. Soc. Am.</i> <b>27</b>, 395-400 (1937)</a>"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.2536 1.031 0.056
+        0.3022 0.833 0.071
+        0.3126 0.814 0.078
+        0.3341 0.745 0.090
+        0.3650 0.496 0.135
+        0.4047 0.275 0.373
+        0.4358 0.181 0.636
+        0.5461 0.157 1.05
+        0.5780 0.164 1.19
