@@ -1,0 +1,19 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>Caesium (Cs)</h1>
+
+<h2>Other name</h2>
+<ul>
+<li>Cesium (American spelling)</li>
+</ul>
+
+<h2>External links</h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Caesium">Caesium - Wikipedia</a></li>
+<li><a href="https://webbook.nist.gov/cgi/cbook.cgi?ID=C7440462">Cesium - NIST Chemistry WebBook</a></li>
+<li><a href="https://www.webelements.com/caesium/">Caesium - WebElements</a></li>
+</ul>
