@@ -1,0 +1,14 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>Rubidium (Rb)</h1>
+
+<h2>External links</h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Rubidium">Rubidium - Wikipedia</a></li>
+<li><a href="https://webbook.nist.gov/cgi/cbook.cgi?ID=C7440177">Rubidium - NIST Chemistry WebBook</a></li>
+<li><a href="https://www.webelements.com/rubidium/">Rubidium - WebElements</a></li>
+</ul>
